Adding some basic html and css

--- a/index.html
+++ b/index.html
@@ -5,41 +5,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Adrian Stefan // Junior Web Developer</title>
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
-  <header>
-    <h1>Lernantino</h1>
+  <header >
+    <h1>Adrian Stefan</h1>
     <nav>
+      <ul class="navbar">
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+        <li><a href="#resume">Resume</a></li>
+      </ul>
     </nav>
   </header>
 
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>Front End Web Developer</h2>
     </div>
   </section>
 
   <main class="page-wrapper">
     <!-- about me -->
     <section class="page-section" id="about">
-      <h2>About Me</h2>
+      <h2>About Me</h2> 
+    </section>
+    <section>
+      <img class="img" src="./images/02-portfolio-1.jpg" alt="portofolio image"/>
+      <p>I enjoy coding and always looking to learn more.</p>
     </section>
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
     </section>
-
+    <section>
+      <img class="img" src="./images/02-portfolio-2.jpg"profile image"/>
+      <p>Something here</p>
+    </section>  
     <!-- contact -->
-    <section class="page-section contact" id="contact">
+    <section class="page-section" id="contact">
       <h2>Contact Me</h2>
     </section>
+    <section class="contact">
+      <img class="img" src="./images/02-portfolio-3.jpg"profile image"/>
+      <p>Phone Number: <a href="tel:+447305643364">(+44) 07305643364</a></p>
+      <p>Email Address: <a href="mailto:stefan.sile@gmail.com">stefan.sile@gmail.com</a></p>
+      <p><a id="git" href="https://github.com/adrianvstefan" target="_blank"><span>GitHub</span></a></p>
+      <br>
+      <p><a id="lkd" href="https://www.linkedin.com/in/adrian-stefan-417a8348/" target="_blank"><span>LinkedIn</span></a></p>
+    </section>
+    <!-- resume -->
+    <section class="page-section" id="resume">
+      <h2>Resume</h2>
+    </section>
+    <section>
+      <img class="img" src="./images/02-portfolio-4.jpg"profile image"/>
+      <p>Something here</p>
+    </section>
   </main>
+  <footer>
+  </footer> 
 </body>
 
 </html>
